--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-indicators": "^0.13.0",
 		"react-native-modal": "^6.1.0",
 		"react-native-modal-selector": "^0.0.27",
+		"react-native-popup-dialog": "^0.14.48",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-stars-rating": "^0.1.7",
 		"react-navigation": "^2.0.4"
